--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -126,11 +126,20 @@
                             <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.</p><br>
                         </main>
                         <footer class="itens-project">
-                            <div>
-                                <a href="#" class="item"><img src="./image/star.svg" alt="star">100</a>
-                                <a href="#" class="item"><img src="./image/git-branch.svg" alt="branch">100</a>
-                            </div>
-                            <p class="item"><img src="./image/circle.svg" alt="circle">JavaScript</p>
+                            <div class="item-left">
+                                <div class="item">
+                                    <img src="./image/star.svg" alt="star">
+                                    <a href="#">100</a>
+                                </div>
+                                <div class="item">
+                                    <img src="./image/git-branch.svg" alt="branch">
+                                    <a href="#">100</a>
+                                </div>
+                            </div>                                                        
+                            <div class="item">
+                                <img src="./image/circle.svg" alt="circle">
+                                <p>JavaScript</p>
+                            </div>                            
                         </footer>
                     </article>
 
@@ -145,11 +154,20 @@
                             <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.</p><br>
                         </main>
                         <footer class="itens-project">
-                            <div>
-                                <a href="#"><img src="./image/star.svg" alt="star">100</a>
-                                <a href="#"><img src="./image/git-branch.svg" alt="branch">100</a>
-                            </div>
-                            <p><img src="./image/circle.svg" alt="circle">JavaScript</p>
+                            <div class="item-left">
+                                <div class="item">
+                                    <img src="./image/star.svg" alt="star">
+                                    <a href="#">100</a>
+                                </div>
+                                <div class="item">
+                                    <img src="./image/git-branch.svg" alt="branch">
+                                    <a href="#">100</a>
+                                </div>
+                            </div>                                                        
+                            <div class="item">
+                                <img src="./image/circle.svg" alt="circle">
+                                <p>JavaScript</p>
+                            </div>                            
                         </footer>
                     </article>
                 </div>
@@ -184,11 +202,13 @@
                 </article>
 
             </section>
-            <footer class="author">
-                <p>Feito com &#128156; por birobirobiro</p>
-            </footer>
         </main>
     </div>
+    <div class="portfolio-author">
+        <p>Feito com &#128156; por birobirobiro</p>
+    </div>
+
+
 </body>
 
 </html>
