editando as infos pessoais do portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,20 +19,20 @@
             <div class="group">
                 <div class="profile-photo">
                     <img src="./image/perfil-portfolio.jpeg" alt="profile-photo">
-                </div>
+                </div><br>
                 <h2>Ivana Feitosa</h2>
                 <p class="profile-subtitle">Web Development Student at Rocketseat</p>
             </div>
 
             <div class="group">
                 <ul class="portfolio-infolist">
-                    <li><img src="./image/map-pin.svg" alt="localization">Brasil</li>
-                    <li><img src="./image/briefcase.svg" alt="job">Rocketseat</li>
-                    <li><a href="#"><img src="./image/github.svg" alt="github">birobirobiro</a></li>
-                    <li><a href="#"><img src="./image/linkedin.svg" alt="linkedin">joão-inácio-neto</a></li>
-                    <li><a href="#"><img src="./image/twitter.svg" alt="twitter">birobirobiro</a></li>
-                    <li><a href="#"><img src="./image/globe.svg" alt="site">https://birobirobiro.dev</a></li>
-                    <li><a href="#"><img src="./image/mail.svg" alt="email">birobirobiro.dev@gmail.com</a></li>
+                    <li><img src="./image/map-pin.svg" alt="localization">Fortaleza-CE, Brasil</li>
+                    <!--<li><img src="./image/briefcase.svg" alt="job">Rocketseat</li>-->
+                    <li><a href="#"><img src="./image/github.svg" alt="github">ivanafeitosa</a></li>
+                    <li><a href="#"><img src="./image/linkedin.svg" alt="linkedin">ivanafeitosa</a></li>
+                    <!--<li><a href="#"><img src="./image/twitter.svg" alt="twitter">birobirobiro</a></li>-->
+                    <!--<li><a href="#"><img src="./image/globe.svg" alt="site">https://birobirobiro.dev</a></li>-->
+                    <li><a href="#"><img src="./image/mail.svg" alt="email">ivsfeitosa@gmail.com</a></li>
                 </ul>
             </div>
 
@@ -40,14 +40,14 @@
                 <h3>Tecnologias</h3>
                 <ul class="portfolio-hardskills">
                     <li>JAVASCRIPT</li>
-                    <li>REACTJS</li>
-                    <li>NODEJS</li>
+                    <!--<li>REACTJS</li>-->
+                    <!--<li>NODEJS</li>-->
                     <li>GIT</li>
                     <li>GITHUB</li>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>ELIXIR</li>
-                    <li>REACT NATIVE</li>
+                    <!--<li>ELIXIR</li>-->
+                    <li>LINGUAGEM R</li>
                 </ul>
             </section>
 
@@ -84,35 +84,35 @@
                 <h3>Educação</h3>
                 <ul class="portfolio-infos">
                     <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - 2019</p>
-                        <p>GoStack</p>
+                        <h4>Universidade Federal do Ceará</h4>
+                        <p>2017 - 2022</p>
+                        <p>Engenharia Civil</p>
                     </li>
 
                     <li>
                         <h4>Rocketseat</h4>
-                        <p>2019 - 2020</p>
-                        <p>Ignite</p>
+                        <p>2022 - Momento Atual</p>
+                        <p>Curso Discover</p>
                     </li>
 
                     <li>
+                        <h4>Digital Innovation One (DIO)</h4>
+                        <p>2022 - Momento Atual</p>
+                        <p>Santander Bootcamp FullStack Developer</p>
+                    </li>
+
+                    <!--<li>
                         <h4>Rocketseat</h4>
                         <p>2019 - 2021</p>
                         <p>Ignite Pro</p>
-                    </li>
-
-                    <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - 2021</p>
-                        <p>Ignite Pro</p>
-                    </li>
+                    </li>-->
                 </ul>
             </section>
         </aside>
         <main class="portfolio-main">
             <section class="project-section">
                 <div class="group menu-project">
-                    <h2>My Projects</h2>
+                    <h2>Meus Projetos</h2>
                     <a href="#">Veja todos</a>
                 </div>
                 <div class="portfolio-project">
@@ -205,7 +205,7 @@
         </main>
     </div>
     <div class="portfolio-author">
-        <p>Feito com &#128156; por birobirobiro</p>
+        <p>Feito com &#128156; por Ivana Feitosa</p>
     </div>
 
 
