finalizando as edicoes para se adequar ao meu perfil

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,6 +37,47 @@
             </div>
 
             <section class="group">
+                <h3>Competências pessoais</h3>
+                <ul class="portfolio-infos">
+                    <li>
+                        <h4>Criatividade</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+
+                    <li>
+                        <h4>Espírito de equipe</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+
+                    <li>
+                        <h4>Empatia</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+
+                    <li>
+                        <h4>Proatividade</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+
+                    <li>
+                        <h4>Vontade de aprender</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+
+                    <li>
+                        <h4>Profissionalismo</h4>
+                        <!--<p>2019 - Atualmente</p>
+                        <p>Community Experience</p>-->
+                    </li>
+                </ul>
+            </section>
+
+            <section class="group">
                 <h3>Tecnologias</h3>
                 <ul class="portfolio-hardskills">
                     <li>JAVASCRIPT</li>
@@ -49,36 +90,7 @@
                     <!--<li>ELIXIR</li>-->
                     <li>LINGUAGEM R</li>
                 </ul>
-            </section>
-
-            <section class="group">
-                <h3>Experiências</h3>
-                <ul class="portfolio-infos">
-                    <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - Atualmente</p>
-                        <p>Community Experience</p>
-                    </li>
-
-                    <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - Atualmente</p>
-                        <p>Community Experience</p>
-                    </li>
-
-                    <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - Atualmente</p>
-                        <p>Community Experience</p>
-                    </li>
-
-                    <li>
-                        <h4>Rocketseat</h4>
-                        <p>2019 - Atualmente</p>
-                        <p>Community Experience</p>
-                    </li>
-                </ul>
-            </section>
+            </section>            
 
             <section class="group">
                 <h3>Educação</h3>
@@ -112,6 +124,31 @@
         <main class="portfolio-main">
             <section class="project-section">
                 <div class="group menu-project">
+                    <h2>Sobre mim</h2>
+                </div>
+                <article class="group post">
+
+                    <div class="conteudo-post">
+                        <main>
+                            <p>Estudante de Desenvolvimento Web FullStack pela Rocketseat objetivando atuar como Desenvolvedora Jr.</p><br>                          
+                            <p>Graduada em Engenharia Civil pela UFC com interesse nas áreas de Tecnologia. Fui bolsista PIBIC UFC por dois anos onde pude atuar na análise de big dada de Transporte Público por meio da Linguagem R de programação. Atualmente tenho me apaixonado e estudado desenvolvimento web. </p><br>
+                            <p>Sempre buscando me desenvolver/aprender cada vez mais.</p>
+                        </main>
+                        <footer>
+                            <div class="tags-post">
+                                <p>#tecnologia</p>
+                                <p>#inovação</p>
+                                <p>#lógica</p>
+                                <p>#evolução</p>
+                            </div>
+                        </footer>
+                    </div>
+                </article>
+
+            </section>
+
+            <section class="project-section">
+                <div class="group menu-project">
                     <h2>Meus Projetos</h2>
                     <a href="#">Veja todos</a>
                 </div>
@@ -119,11 +156,11 @@
                     <article class="group project">
                         <header class="title-project">
                             <img src="./image/folder.svg" alt="foldericon">
-                            <h3><a href="#">my-onix</a></h3>
+                            <h3><a href="#">Flex-projeto</a></h3>
                         </header>
                         <main>
                             <br>
-                            <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.</p><br>
+                            <p>Página de vendas de pacotes de turismo usando display flex e com responsividade.</p><br>
                         </main>
                         <footer class="itens-project">
                             <div class="item-left">
@@ -137,21 +174,20 @@
                                 </div>
                             </div>                                                        
                             <div class="item">
-                                <img src="./image/circle.svg" alt="circle">
-                                <p>JavaScript</p>
+                                <img src="./image/circle-roxo.svg" alt="circle">
+                                <p>CSS</p>
                             </div>                            
                         </footer>
                     </article>
 
-
                     <article class="group project">
                         <header class="title-project">
                             <img src="./image/folder.svg" alt="foldericon">
-                            <h3><a href="#" style="color: #837E9F;">my-onix</a></h3>
+                            <h3><a href="#" style="color: #837E9F;">Countdown</a></h3>
                         </header>
                         <main>
                             <br>
-                            <p>Consulte os códigos de erro que aparecem no painel do veículo Onix.</p><br>
+                            <p>Página de coming soon para o lançamento de um site. Possui um countdown timer.</p><br>
                         </main>
                         <footer class="itens-project">
                             <div class="item-left">
@@ -173,7 +209,7 @@
                 </div>
             </section>
 
-            <section class="project-section">
+            <!--<section class="project-section">
                 <div class="group menu-project">
                     <h2>Recent Posts</h2>
                 </div>
@@ -201,7 +237,7 @@
                     </div>
                 </article>
 
-            </section>
+            </section>-->
         </main>
     </div>
     <div class="portfolio-author">
