ajuste descricao perfil

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,7 @@
                     <img src="./image/perfil-portfolio.jpeg" alt="profile-photo">
                 </div><br>
                 <h2>Ivana Feitosa</h2>
-                <p class="profile-subtitle">Web Development Student at Rocketseat</p>
+                <p class="profile-subtitle">Estudante de Desenvolvimento Web FullStack pela Rocketseat</p>
             </div>
 
             <div class="group">
